--- a/server/socketio.html
+++ b/server/socketio.html
@@ -13,29 +13,27 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      let data = { username: 'admin', password: 'admin' };
-
-      let sid = y5SWm470kybltOnzAAAC;
-
-      fetch('http://127.0.0.1:5000/api/login', {
-        method: 'POST',
-        body: JSON.stringify(data),
-      }).then(res => {
-        console.log('Request complete! response:', res);
-      });
+      let data = {
+        username: 'admin',
+        password: 'admin',
+        email: 'admin@admin.com',
+      };
+      let token =
+        'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2MzMyNjA4NjAsImlhdCI6MTYzMDU4MjQ2MCwic3ViIjoxfQ.SranRMGAEaMl4zcCCErGm2wFU5IVNvm3-myh957M3qE';
 
       const sio = io('http://127.0.0.1:5000/api', {
         transports: ['websocket', 'polling'],
         withCredential: true,
       });
 
-      sio.on('connect', socket => {
+      sio.on('connect', () => {
         console.log('connected');
-        socket.emit('push', { test: 'test' });
+        sio.emit('push', { token: token, test: 'test' });
       });
 
-      sio.on('relogin', () => {
+      sio.on('error', data => {
         console.log('relogin');
+        console.log(data);
       });
     </script>
   </body>
