--- a/server/socketio.html
+++ b/server/socketio.html
@@ -19,7 +19,7 @@
         email: 'admin@google.com',
       };
       let token =
-        'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2MzMyNzQ2MjcsImlhdCI6MTYzMDU5NjIyNywic3ViIjoyfQ.-KQosRZ7K97KeRN3tr7c00XI3oef029bkE2WO5YqkwY';
+        'eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJleHAiOjE2MzMyNjA4NjAsImlhdCI6MTYzMDU4MjQ2MCwic3ViIjoxfQ.SranRMGAEaMl4zcCCErGm2wFU5IVNvm3-myh957M3qE';
 
       // fetch('http://localhost:5000/api/logout', {
       //   method: 'POST',
@@ -40,7 +40,7 @@
       sio.on('connect', () => {
         console.log('connected');
         sio.emit('push', { token: token, test: 'test' });
-        sio.emit('pull', { token: token });
+        //sio.emit('pull', { token: token });
       });
 
       sio.on('error', data => {
